--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,7 +7,10 @@
         "semphr.h": "c",
         "stdio.h": "c",
         "hd44780.h": "c",
-        "mcpwm.c": "cpp"
+        "mcpwm.c": "cpp",
+        "audio_renderer.h": "c",
+        "audio_player.h": "c",
+        "i2s.h": "c"
     }, "run": {
         "defaultColor": "white", // Can also use string color names.
         "commands": [
