Updated sw frame

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,13 @@
-/build/
-
+/.vs
+/build
+/CodeDB
+/VisualGDB*
 /.settings/
 /.cproject
 /.project
-/sdkconfig
 /sdkconfig.old
 *.DB*
+*.sln
+*.vgdbproj*
+*.cmake
+*.old
