--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,23 +1,39 @@
 {
-    // Use IntelliSense to learn about possible attributes.
-    // Hover to view descriptions of existing attributes.
-    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
-    "version": "0.2.0",
-    "configurations": [
-        {
-            "name": "Debug",
-            "type": "gdb",
-            "request": "attach",
-            "cwd": "${workspaceRoot}",
-            "executable": "${workspaceRoot}/build/mp3_decoder.elf",
-            "target": ":3333",
-            "remote": true,
-            "gdbpath": "C:/Program Files/Espressif/ESP-IDF Tools/tools/bin/xtensa-esp32-elf-gdb.exe",
-            "autorun": [
-                "mon reset halt",
-                "flushregs",
-                "break app_main"
-            ],
-        }
-    ]
+	"version": "0.1.0",
+	"configurations": [	
+		{
+			"name": "Flash + Debug",
+			"type": "gdb",
+			"request": "launch",
+			"target": "./build/${workspaceFolderBasename}.elf",
+			"cwd": "${workspaceFolder}",
+			"gdbpath": "xtensa-esp32-elf-gdb",
+			"preLaunchTask": "OpenOCD",
+			"autorun": [
+				"target remote :3333",
+				"mon reset halt",
+				"mon program_esp32 ./build/${workspaceFolderBasename}.bin 0x10000",
+				"mon reset halt",
+				"flushregs",
+				"thb app_main",
+				"c"
+			],
+		},
+		{
+			"name": "Debug",
+			"type": "gdb",
+			"request": "launch",
+			"target": "./build/${workspaceFolderBasename}.elf",
+			"cwd": "${workspaceFolder}",
+			"gdbpath": "xtensa-esp32-elf-gdb",
+			"preLaunchTask": "OpenOCD",
+			"autorun": [
+				"target remote :3333",
+				"mon reset halt",
+				"flushregs",
+				"thb app_main",
+				"c"
+			],
+		}
+	]
 }
