--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,10 +1,8 @@
-
-# (Automatically converted from project Makefile by convert_to_cmake.py.)
-
-# The following lines of boilerplate have to be in your project's CMakeLists
-# in this exact order for cmake to work correctly
+# The following five lines of boilerplate have to be in your project's
+# CMakeLists in this exact order for cmake to work correctly
 cmake_minimum_required(VERSION 3.5)
 
-
 include($ENV{IDF_PATH}/tools/cmake/project.cmake)
-project(idf_webradio)
+get_filename_component(ProjectId ${CMAKE_CURRENT_LIST_DIR} NAME)
+string(REPLACE " " "_" ProjectId ${ProjectId})
+project(${ProjectId})
